<resources>
    <string name="app_name">AppsMoviles_Lab1_1</string>
    <string name="string_nombre">Nombre</string>
    <string name="string_email">Correo electrónico</string>
    <string name="string_contrasena">Contraseña</string>
    <string name="string_confirmarpass">Confirmar contraseña</string>
    <string name="string_tituloformulario">Formulario de registro</string>
    <string name="string_femenino">Femenino</string>
    <string name="string_masculino">Masculino</string>
    <string name="string_genero">Genero</string>
    <string name="string_hobbies">Hobbies</string>
    <string name="string_ejercicio">Ejercicio</string>
    <string name="string_leer">Leer</string>
    <string name="string_senderismo">Senderismo</string>
    <string name="string_eventos">Eventos culturales</string>
    <string name="string_fnacimiento">Fecha de nacimiento</string>
    <string name="bdate">dd/mm/yy</string>
    <string name="string_lugarnac">Lugar de nacimiento</string>
    <string name="string_registrar">Registrarse</string>
    <string name="info">Nombre: %s\nApellidos: %s\nEmail: %s\nContraseña: %s\nConfirmar contraseña: %s\nGénero: %s\nHobbies: %s\nCiudad de nacimiento: %s\nFecha de nacimiento: %s\n</string>
    <string name="string_apellido">Apellidos</string>
</resources>